--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,5 @@
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
