--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "html-pdf": "^3.0.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "puppeteer": "^14.4.0"
   },
   "devDependencies": {
     "concurrently": "^7.2.0",
