--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "list of questions that evaluate from 0 to 5",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon backend/server.js",
+    "start": "node backend",
+    "server": "nodemon backend/index.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
